# SkillForgeAI

./: README.md
backend/: SkillForgeAI.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/ai/: evaluate_coding.py  evaluate_explanation.py  evaluations.py  gemini_client.py  skill_delta.py
backend/app/api/: deps.py  diagnose.py  learning_state.py  login.py  logout.py  refresh.py  register.py  roadmap.py  roadmap_slot.py  slots.py  system_control.py  tasks.py  users.py
backend/app/core/: config.py  exceptions.py  logging.py  system_status.py
backend/app/db/: base.py  learning_state_repo.py  skill_evidence_repo.py  skill_history_repo.py  skill_registry_repo.py  task_submission_repo.py  user_repo.py  user_roadmap_repo.py
backend/app/domain/: control_rules.py  evaluation_history.py  golden_tasks.py  remediation_unlocker.py  roadmap.py  roadmap_transitions.py  roadmap_validator.py  skill.py  skill_vector_updater.py  task_context.py  task_template_loader.py  task_template_resolver.py
backend/app/schemas/: ai_evaluation.py  curriculum.py  decision_trace.py  evaluation_telemetry.py  learning_state.py  roadmap_state.py  skill_evidence.py  skill_history.py  skill_registry.py  skill_update_telemetry.py  system_events.py  task_instance.py  task_submission.py  task_template.py  user.py  user_roadmap.py
backend/app/services/: ai_services.py  auth_service.py  calibration_scheduler.py  roadmap_service.py  (+10 more)
backend/curriculum/: dsa.yaml
backend/scripts/: sync_roadmap_difficulties.py
backend/tests/: test_drift_detection.py  test_evaluator_regression.py
(+72 files in other folders)
