[project]
name = "backend"
version = "0.1.0"
description = "Backend API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.124.4",
    "jwt>=1.4.0",
    "motor>=3.7.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "uvicorn>=0.38.0",
]
